added new files

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 PORT = 5000
 MONGO_DB_URI = mongodb+srv://casperroj73:hGISDHChVY0XznRK@cluster0.ecq7w.mongodb.net/chat_app_db?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=3Bwy/W4ZHJI2/dkyD8HHCgBy0DUN6bKy1z5kCZwXl98=
+
+NODE_ENV =development
